--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "Home") %>
+<div class="center jumbotron">
 <h1>Ticket Market App</h1>
 <p>
   This is the home page for the Ticket Market application.
 </p>
+</div>
