Modeling users with devise gem

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
      <nav>
        <ul class="nav navbar-nav navbar-right">
         <li> <span class="glyp glyphicon glyphicon-user" aria-hidden="true"> </span> </li>
-        <li><%= link_to "Login", '#' %> </li>
+        <li><%= link_to "Login", new_user_session_path  %> </li>
         <li><%= link_to "+ Add Announcment", '#', class: "btn btn-lg btn-warning" %></li>
       </ul>
     </nav>
