Add user settings

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
                <li class="dropdown-header">My TM:</li>
                <li><%= link_to "Announcements", "#" %> </li>
                <li><%= link_to "Replies", "#" %> </li>
-               <li><%= link_to "Settings", "#" %> </li>
+               <li><%= link_to "Settings", edit_user_path(current_user) %> </li>
                <li class="divider"></li>
                <li class="dropdown-header">Followed:</li>
                <li><%= link_to "Announcements", "#" %> </li>
