Add location to tickets

--- a/app/views/tickets/_ticket_form.html.erb
+++ b/app/views/tickets/_ticket_form.html.erb
@@ -16,6 +16,8 @@
       <%= f.label :price %>
       <%= f.number_field :price, autocomplete: "on" , class: 'form-control' %>
       
+      <%= f.label :location %>
+      <%= f.text_field :location, autocomplete: "on" , class: 'form-control' %>
       
        
       <br/><br/>Contact informations:<br/>
