Add ticket categories

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,3 +156,22 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* Category index */
+
+.t1 {
+  margin-left: 60px;
+}
+.t2 {
+  margin-left: 600px;
+}
+
+.centert {
+  text-align: center;
+  padding: 10px;
+}
+
+.cat {
+  margin-left: 300px;
+}
+
