--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,7 +1,7 @@
 <li>
   <span class="title"><%= link_to ticket.title, ticket_path(ticket) %></span>
   <span class="price"><%= ticket.price %></span>
-  <span class="category">#ticket.category</span>
+  <span class="category"><%= ticket.category.main.text %> > <%= ticket.category.text%></span>
   <span class="location"><%= ticket.location %></span>
   <span class="timestamp">
     Added <%= time_ago_in_words(ticket.created_at) %> ago.
