--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -108,53 +108,57 @@ footer ul li {
 
 /* tickets */
 
-.tickets {
-  list-style: none;
-  padding: 0;
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8;
-  }
-  .title {
-    margin-top: 5em;
-    padding-top: 0;
-    font-size: 1.2em;
-    margin-left: 60px;
-        img {
-      display: block;
-      padding: 5px 0;
-    }
-  }
-  .category {
-    display: block;
-    margin-left: 60px;
-  }
-  
-    .location {
-    display: block;
-    margin-left: 60px;
-  }
-  
-  .timestamp {
-    color: $gray-light;
-    display: block;
-    margin-left: 60px;
-  }
-  
-  .price {
-
-
-    padding-top: 0;
-    font-size: 1.5em;
-    float: right;
-
-  }
+.panel-table .panel-body{
+  padding:0;
 }
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
-  }
+
+.panel-table .panel-body .table-bordered{
+  border-style: none;
+  margin:0;
+}
+
+.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type {
+    text-align:center;
+    width: 100px;
+}
+
+.panel-table .panel-body .table-bordered > thead > tr > th:last-of-type,
+.panel-table .panel-body .table-bordered > tbody > tr > td:last-of-type {
+  border-right: 0px;
+}
+
+.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type,
+.panel-table .panel-body .table-bordered > tbody > tr > td:first-of-type {
+  border-left: 0px;
+}
+
+.panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td{
+  border-bottom: 0px;
+}
+
+.panel-table .panel-body .table-bordered > thead > tr:first-of-type > th{
+  border-top: 0px;
+}
+
+.panel-table .panel-footer .pagination{
+  margin:0; 
+}
+
+/*
+used to vertically center elements, may need modification if you're not using default sizes.
+*/
+.panel-table .panel-footer .col{
+ line-height: 34px;
+ height: 34px;
+}
+
+.panel-table .panel-heading .col h3{
+ line-height: 30px;
+ height: 30px;
+}
+
+.panel-table .panel-body .table-bordered > tbody > tr > td{
+  line-height: 34px;
 }
 
 /* Category index */
@@ -175,3 +179,12 @@ aside {
   margin-left: 300px;
 }
 
+/* Ticket show */
+.left {
+  float: left;
+  margin-left: 60px;
+}
+.right {
+  float: right;
+  margin-right: 60px;
+}
