--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -22,9 +22,14 @@
    </div>
 <% end %>
 </div>
-<ul class="tickets">
-     <%= render @tickets %>
-</ul>
+
+
+    <table class="table table-striped table-bordered table-list">
+      <tbody>
+        <%= render @tickets %>
+      </tbody>
+    </table>
+
 
 
 
