--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,25 @@
-<%= link_to 'All categories', categories_path %><br>
-<% if @category.main? %>
-<%= @category.text %> >>
-<% @category.subcategories.each do |subcategory| %>
-<%= link_to subcategory.text, category_path(subcategory) %>  
-<% end %>
-<% else %>
-<%= link_to @category.main.text, category_path(@category.main) %> << <%= @category.text %>
-<% end %>
+<div class="panel panel-default panel-table">
+  <div class="panel-heading">
+    <div class="row">
+      <div class="col col-xs-6">
+        <h3 class="panel-title"><%= link_to 'All categories', categories_path %> |
+        <% if @category.main? %>
+          <%= @category.text %> >>
+          <% @category.subcategories.each do |subcategory| %>
+            <%= link_to subcategory.text, category_path(subcategory) %>  
+          <% end %>
+       <% else %>
+         <%= link_to @category.main.text, category_path(@category.main) %> << <%= @category.text %>
+      <% end %>
+      </h3>
+      </div>
+    </div>
+  </div>
  <div class="panel-body">
-   <ul class="tickets">
-     <%= render @tickets %>
-    </ul>
+    <table class="table table-striped table-bordered table-list">
+      <tbody>
+        <%= render @tickets %>
+      </tbody>
+    </table>
   <%= will_paginate @tickets %>
+  </div>
