--- a/app/views/tickets/_ticket_form.html.erb
+++ b/app/views/tickets/_ticket_form.html.erb
@@ -21,7 +21,10 @@
       <br> <br>
       <%= f.label :category %>
       <%= f.grouped_collection_select(:category_id, Category.where(main_id: nil).all, :subcategories, :text, :id, :text) %>
-
+      <br> <br>
+        <%= f.label :picture %>
+        <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+      
        
       <br/><br/>Contact informations:<br/>
         <%= f.fields_for :user_attributes do |user_form| %>
@@ -35,6 +38,16 @@
         <% end %>
 
       <%= f.submit yield(:btn_text), class: "btn btn-primary" %>
-    <% end %>
+      <% end %>
+      
+<script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
+ 
   </div>
 </div>
