--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -1,4 +1,10 @@
 <% provide(:title, "Edit announcement") %>
 <% provide(:btn_text, "Update") %>
 <h1>Update your announcement</h1>
+<div class="center">
+<% if @ticket.picture? %>
+  <%= image_tag @ticket.picture.url %>
+<% end %>
+</div>
 <%= render 'ticket_form' %>
+  </span>
