--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -2,7 +2,11 @@
 <h1>All tickets</h1>
 
 <%= will_paginate %>
-   <ul class="tickets">
-     <%= render @tickets %>
-   </ul>
+    <table class="table table-striped table-bordered table-list">
+      <tbody>
+
+        <%= render @tickets %>
+
+      </tbody>
+    </table>
 <%= will_paginate %>
