--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
-<div class="panel panel-default">
+<div class="panel panel-default panel-table">
   <div class="panel-heading">
-    <h3 class="panel-title"><%= @user.name %></h3><br/>
-    All users's tickets
+    <div class="row">
+      <div class="col col-xs-6">
+        <h3 class="panel-title"><%= @user.name %></h3>
+        <br>All users's tickets 
+      </div>
+    </div>
   </div>
   <div class="panel-body">
+    <table class="table table-striped table-bordered table-list">
+      <tbody>
     <% if @user.tickets.any? %>
-          <ul class="tickets">
         <%= render @tickets %>
-      </ul>
-      <%= will_paginate @tickets %>
+        <%= will_paginate @tickets %>
     <% end %>
-
+      </tbody>
+    </table>
   </div>
 </div>
