--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'searches/simple_search' %>
 <div class="cat">
 <% @categories.each do |main| %>
 <div class="btn btn-default">
@@ -25,6 +26,7 @@
 
 
     <table class="table table-striped table-bordered table-list">
+      <h3> LATEST TICKETS</h3>
       <tbody>
         <%= render @tickets %>
       </tbody>
