--- a/app/views/tickets/_follow.html.erb
+++ b/app/views/tickets/_follow.html.erb
@@ -3,6 +3,5 @@
     <div><%= hidden_field_tag :followed_id, @ticket.id %></div>
     <%= f.submit "Follow", class: "btn btn-primary" %>
   <% end %>
-<% else %>
- <%= link_to "Follow", '#' ,class: "btn btn-primary"  %>
+<% else %> <%= link_to "Follow", new_user_session_path, class: "btn btn-primary"  %>
 <% end %>
