--- a/app/views/tickets/_ticket_form.html.erb
+++ b/app/views/tickets/_ticket_form.html.erb
@@ -9,10 +9,10 @@
 
       <%= f.label :content %>
       <%= f.text_area :content, size: "24x6", class: 'form-control' %>
-      
+      <br>
       <%= f.label :ticket_type %>
-      <%= f.text_field :ticket_type, autocomplete: "on" , class: 'form-control' %>
-
+      <%= f.select :ticket_type, [['paper ticket', 'paper ticket'], ['eTicket', 'eTicket']], autocomplete: "on" , class: 'form-control' %>
+      <br>
       <%= f.label :price %>
       <%= f.number_field :price, autocomplete: "on" , class: 'form-control' %>
       
