--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<%= render 'searches/search_form' %>
+<h5> Sort by: <%= sortable('activated_at', 'latest') %>
+              <%= sortable('price', 'price') %>
+</h5>
 <div class="panel panel-default panel-table">
   <div class="panel-heading">
     <div class="row">
