Add tests to search

--- a/app/views/searches/_search_form.erb
+++ b/app/views/searches/_search_form.erb
@@ -31,5 +31,5 @@
   <%= f.submit "Search" %>  
   </p></p>
 <% end %>
-  <%= render 'save_search' %>
+  <%= render 'searches/save_search' %>
 </div>
