--- a/app/views/searches/_save_search.html.erb
+++ b/app/views/searches/_save_search.html.erb
@@ -1,4 +1,4 @@
-<% if current_user && @search.present? && @search.user.nil? %>
+<% if current_user.present? && @search.present? && @search.user.nil? %>
   <%= form_for @search do |f| %>
     <div><%= hidden_field_tag :user_id, current_user.id %></div>
     <%= f.submit "save search", class: "btn btn-primary" %>
