--- a/app/views/relationships/destroy.js.erb
+++ b/app/views/relationships/destroy.js.erb
@@ -1,2 +1,5 @@
-$("#follow_form").html("<%= escape_javascript(render('tickets/follow')) %>");
-$("#followers").html('<%= @ticket.followers.count %>');
+$("#follow_form-<%= @ticket.id %>").html("<%= escape_javascript(render('tickets/follow')) %>");
+
+if (location.href.match(/following/)) {
+$("#<%= @ticket.id %>").hide("slow");
+}
