--- a/app/views/searches/_save_search.html.haml
+++ b/app/views/searches/_save_search.html.haml
@@ -1,6 +1,8 @@
 - if current_user.present? && @search.present? && @search.user.nil?
-  %div#save_search_form-@search.id
+  %div{:id => "save_search_form-#{@search.id}"}
     = form_for(@search, remote: true) do |f|
       %div
         - hidden_field_tag :user_id, current_user.id
       = f.submit "save search", class: "btn btn-primary"
+
+  
